# ai-toolkit-components

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yaml  pyproject.toml  run_tests.sh
.github/workflows/: application-test.yml  component-build-test.yml  publish-latest.yml  release.yml  unit-tests.yml
applications/mcp_datastore/: README.md  docker-compose.yaml  knowledge_hub_urls.txt  mcp_server.py
applications/mcp_datastore/vignettes/: knowledge-hub-explorer.html  knowledge-hub-quickstart.md
components/data_ingestor/: Dockerfile  README.md  entrypoint.sh
components/data_ingestor/src/: ingestor.py  requirements.txt
components/mcp_server/: Dockerfile  README.md  entrypoint.sh
components/mcp_server/src/: requirements.txt  server.py
components/vector_db/: Dockerfile  README.md  entrypoint.sh
components/vector_db/src/: requirements.txt
components/vector_query/: Dockerfile  README.md  entrypoint.sh
components/vector_query/src/: query.py  registry.py  requirements.txt
demo/: README.md  app.py  pyproject.toml
docs/: contributing.md  contributing_applications.md  contributing_components.md  prerequisites.md
templates/application/: README.md  docker-compose.yaml
templates/component/: Dockerfile  README.md  entrypoint.sh
templates/component/src/: registry.py  requirements.txt
tests/: __init__.py  conftest.py  test_utils.py
tests/applications/: test_mcp_datastore.py
tests/components/: test_data_ingestor.py  test_mcp_server.py  test_vector_db.py  test_vector_query.py
tests/unit/: test_data_ingestor.py  test_mcp_server.py
(+35 files in other folders)
